@@ -11,9 +11,6 @@
 @NOTVERSIONING@module() { eval `@bindir@/modulecmd bash $*`; }
 export -f module
 
-MODULESHOME=@prefix@
-export MODULESHOME
-
 if [ "${LOADEDMODULES:-}" = "" ]; then
   LOADEDMODULES=
   export LOADEDMODULES
