@@ -17,8 +17,6 @@ function(module ARGS)
   include(${tempfile_name})
 endfunction(module)
 
-set(ENV{MODULESHOME} "@prefix@")
-
 if(NOT ENV{MODULEPATH})
   file(STRINGS "@INITPATH@/.modulespath" cmi_mp1)
   string(REGEX REPLACE ";[ \n]+" ";" cmi_mp2 "${cmi_mp1}")
