@@ -42,8 +42,6 @@ unset exec_prefix
 unset prefix
 unset postfix
 
-setenv MODULESHOME @prefix@
-
 if (! $?MODULEPATH ) then
   setenv MODULEPATH `sed -n 's/[ 	#].*$//; /./H; $ { x; s/^\n//; s/\n/:/g; p; }' @INITPATH@/.modulespath`
 endif
