@@ -14,8 +14,6 @@ sub module {
 @NOTVERSIONING@	eval `$exec_prefix/modulecmd perl @_`;
 }
 
-$ENV{"MODULESHOME"} = "@prefix@";
-
 if (! defined $ENV{"MODULEPATH"} ) {
 	open(IN, "@INITPATH@/.modulespath") || die "cannot open '.modulespath' file: $!\n";
 	$ENV{"MODULEPATH"} = join(":", grep(/\S/, map { s/^\s*//g; s/[\s#].*$//g; $_ } <IN>));
