@@ -5,7 +5,6 @@ import os, re, subprocess
 @VERSIONING@	os.environ['MODULE_VERSION'] = '@VERSION@'
 @VERSIONING@else:
 @VERSIONING@	os.environ['MODULE_VERSION_STACK'] = os.environ['MODULE_VERSION']
-@VERSIONING@os.environ['MODULESHOME'] = '@prefix@'
 
 if not os.environ.has_key('MODULEPATH'):
 	f = open("@INITPATH@/.modulespath", "r")
