@@ -10,9 +10,6 @@
 @VERSIONING@module() { eval `@BASEPREFIX@/$MODULE_VERSION/bin/modulecmd sh $*`; }
 @NOTVERSIONING@module() { eval `@bindir@/modulecmd sh $*`; }
 
-MODULESHOME=@prefix@
-export MODULESHOME
-
 if [ "${LOADEDMODULES:-}" = "" ]; then
   LOADEDMODULES=
   export LOADEDMODULES
