@@ -22,7 +22,6 @@ set	exec_prefix	@exec_prefix@
 set	datarootdir	@datarootdir@
 
 
-setenv		MODULESHOME	$prefix
 prepend-path    PATH   		@bindir@
 prepend-path    MANPATH		@mandir@
 
