@@ -30,6 +30,7 @@ modules 3.3.0
 	  module directory ... useful for deep modulefile directories.
 	* Reworked configuration and Makefile for fine-grain control of
 	  certain paths and config files.
+	* Removed the $MODULESHOME env.var. which is not used at all.
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.9
